# qas2025

./: .gitignore  LICENSE.code  Makefile  README.md  SCRIPTS_README.md  build.sh  building_steps.md  deploy.sh  environment.yaml  environment.yml  index.html  objects.inv  preview.sh  pyproject.toml  requirements.txt  searchindex.js  update_env.sh
.github/workflows/: sphinx.yml
_sources/: day2.md.txt  day3.md.txt  index.md.txt  related-resources.md.txt
_static/: 09-dd.ipynb
branch/adding-content/: index.html  objects.inv  searchindex.js
branch/improve-token-in-starter-notebook/: index.html  objects.inv  searchindex.js
branch/kernel_estimation/: index.html  objects.inv  searchindex.js
branch/main/: index.html  objects.inv  searchindex.js
content/: QKE.ipynb  QKE_AA.ipynb  conf.py  day0.md  day1.md  day2.md  day3.md  day4.md  day5.md  environment-setup.md  index.md  pechakucha.md  related-resources.md  schedule.md
content/_static/: qrisp-starter.ipynb
day0/: index.html
day1/: index.html
day3/: index.html
day4/: index.html
day5/: index.html
episode/: index.html
genindex/: index.html
guide/: index.html
notebooks/QEC/: Repetition code on IQM.ipynb
notebooks/QKE/: QKE_BL_AA_IQM_2025.ipynb
notebooks/getting-started/: OLDqrisp-intro.ipynb  qrisp-starter-tutorial.md  qrisp-starter.ipynb  token.txt
notebooks/kernel_estimation/: QKE_BL_AA_IQM_2025.ipynb
notebooks/pulse/: 11-readout.ipynb
related-resources/: index.html
schedule/: index.html
search/: index.html
singlehtml/: index.html  objects.inv
singlehtml/_static/: 11-readout.ipynb
(+69 files in other folders)
